# A-or-B

./: .gitignore  README.md  README2.md
backend/: .env  Cargo.toml  build.gradle.kts  gradle.properties  micronaut-cli.yml  openapi.properties  openapi.yml  settings.gradle.kts
backend/migrations/2020-08-19-175618_tickets/: up.sql
backend/migrations/2020-08-19-175618_tickets/src/: schema.rs
backend/migrations/2020-08-19-182953_tickets/: up.sql
backend/migrations/2020-08-19-192254_tickets/: down.sql  up.sql
backend/migrations/2020-08-20-082750_tickets/: down.sql  up.sql
backend/migrations/2020-08-20-094243_tickets/: up.sql
backend/migrations/2020-08-20-153720_game/: up.sql
backend/migrations/2020-08-20-154911_round/: up.sql
backend/migrations/2020-08-21-093558_rounds/: down.sql  up.sql
backend/src/: auth.rs  main.rs  models.rs  schema.rs
backend/src/api/: database_utilty.rs  handlers.rs  mod.rs  types.rs
backend/src/api/websocket/: handler.rs  mod.rs  websocket.rs
backend/src/main/kotlin/com/andreasjj/: Application.kt
backend/src/main/kotlin/com/andreasjj/controller/: GameController.kt  TicketController.kt
backend/src/main/kotlin/com/andreasjj/entity/: Game.kt  Round.kt  RoundId.kt  Ticket.kt
backend/src/main/kotlin/com/andreasjj/jobs/: NextRoundJob.kt  NextRoundTask.kt
backend/src/main/kotlin/com/andreasjj/manager/: TicketManager.kt
backend/src/main/kotlin/com/andreasjj/repository/: GameRepository.kt  RoundRepository.kt  TicketRepository.kt
backend/src/main/resources/: application.yml  logback.xml
backend/src/test/kotlin/com/andreasjj/: DbackendTest.kt
frontend/: .eslintrc.json  (+5 more)
(+111 files in other folders)
